--- a/webview-generic.css
+++ b/webview-generic.css
@@ -155,4 +155,24 @@ span[data-type="media"] img {
 :not(figure) > [data-type="media"].scaled-down-30 img {
   width: 30%; }
 
+[data-type="term"] {
+  font-weight: bold; }
+
+.term {
+  font-weight: bold; }
+
+ul {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: #424242; }
+
+ol {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: #424242; }
+
+.os-abstract {
+  list-style-type: none;
+  padding-left: 2rem; }
+
 /*# sourceMappingURL=webview-generic.css.map */
