--- a/webview-generic.css
+++ b/webview-generic.css
@@ -1,3 +1,8 @@
+[data-type="page"],
+[data-type="composite-page"] {
+  font-size: 1.6rem;
+  line-height: 2.3rem; }
+
 h1 {
   color: #333;
   margin: 1.5rem 0 1rem 0;
