--- a/webview-generic.css
+++ b/webview-generic.css
@@ -206,4 +206,12 @@ ol {
   margin: 0 0 1rem 1.5rem;
   color: #555; }
 
+a {
+  color: #027EB5;
+  cursor: pointer;
+  text-decoration: underline; }
+
+a:hover {
+  color: #0064A0; }
+
 /*# sourceMappingURL=webview-generic.css.map */
