--- a/webview-generic.css
+++ b/webview-generic.css
@@ -214,4 +214,132 @@ a {
 a:hover {
   color: #0064A0; }
 
+[data-type="note"] {
+  margin: 3rem 0;
+  padding: 1.5rem;
+  border-style: solid;
+  border-width: 0.2rem;
+  border-color: #dcdcdc;
+  background-color: #ededed; }
+
+[data-type="note"].ui-has-child-title > [data-type="title"] {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="note"] > section {
+  padding: 0rem;
+  border-top: none;
+  background-color: #ededed;
+  color: #555; }
+
+[data-type="note"] > section span[data-type="media"] {
+  display: block;
+  margin: 1rem 0; }
+
+.note {
+  margin: 3rem 0;
+  padding: 1.5rem;
+  border-style: solid;
+  border-width: 0.2rem;
+  border-color: #dcdcdc;
+  background-color: #ededed; }
+
+.note.ui-has-child-title > [data-type="title"] {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.note > section {
+  padding: 0rem;
+  border-top: none;
+  background-color: #ededed;
+  color: #555; }
+
+.note > section span[data-type="media"] {
+  display: block;
+  margin: 1rem 0; }
+
+[data-type="example"] {
+  margin: 3rem 0;
+  padding: 1.5rem;
+  border-style: solid;
+  border-width: 0.2rem;
+  border-color: #dcdcdc;
+  background-color: #ededed; }
+
+[data-type="example"].ui-has-child-title > [data-type="title"] {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="example"] > section {
+  padding: 0rem;
+  border-top: none;
+  background-color: #ededed;
+  color: #555; }
+
+[data-type="example"] > section span[data-type="media"] {
+  display: block;
+  margin: 1rem 0; }
+
+.example {
+  margin: 3rem 0;
+  padding: 1.5rem;
+  border-style: solid;
+  border-width: 0.2rem;
+  border-color: #dcdcdc;
+  background-color: #ededed; }
+
+.example.ui-has-child-title > [data-type="title"] {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.example > section {
+  padding: 0rem;
+  border-top: none;
+  background-color: #ededed;
+  color: #555; }
+
+.example > section span[data-type="media"] {
+  display: block;
+  margin: 1rem 0; }
+
 /*# sourceMappingURL=webview-generic.css.map */
