fixup! add styling of noteish elements

--- a/webview-generic.css
+++ b/webview-generic.css
@@ -222,7 +222,7 @@ a:hover {
   border-color: #dcdcdc;
   background-color: #ededed; }
 
-[data-type="note"] [data-type="title"] {
+[data-type="note"] > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -236,7 +236,7 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-[data-type="note"] .title {
+[data-type="note"] > header > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -250,7 +250,35 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-[data-type="note"] .os-title {
+[data-type="note"] > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="note"] > header > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="note"] > header > .os-title {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -282,7 +310,7 @@ a:hover {
   border-color: #dcdcdc;
   background-color: #ededed; }
 
-.note [data-type="title"] {
+.note > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -296,7 +324,7 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-.note .title {
+.note > header > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -310,7 +338,35 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-.note .os-title {
+.note > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.note > header > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.note > header > .os-title {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -342,7 +398,7 @@ a:hover {
   border-color: #dcdcdc;
   background-color: #ededed; }
 
-[data-type="example"] [data-type="title"] {
+[data-type="example"] > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -356,7 +412,7 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-[data-type="example"] .title {
+[data-type="example"] > header > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -370,7 +426,35 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-[data-type="example"] .os-title {
+[data-type="example"] > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="example"] > header > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+[data-type="example"] > header > .os-title {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -402,7 +486,7 @@ a:hover {
   border-color: #dcdcdc;
   background-color: #ededed; }
 
-.example [data-type="title"] {
+.example > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -416,7 +500,7 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-.example .title {
+.example > header > [data-type="title"] {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
@@ -430,7 +514,35 @@ a:hover {
   letter-spacing: 0.1rem;
   text-transform: uppercase; }
 
-.example .os-title {
+.example > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.example > header > .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 0rem 1.5rem 1rem 1.5rem;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: #dcdcdc;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase; }
+
+.example > header > .os-title {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
