--- a/webview-generic.css
+++ b/webview-generic.css
@@ -622,6 +622,73 @@ a:hover {
 [data-type="example"] .solution:not(.ui-solution-visible) > section {
   display: none; }
 
+[data-type="example"].check-understanding [data-type="title"]::before {
+  margin-right: 0;
+  content: ""; }
+
+[data-type="example"].check-understanding .title::before {
+  margin-right: 0;
+  content: ""; }
+
+[data-type="example"].problems-exercises [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="example"].problems-exercises .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="example"].problems-exercises [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="example"].problems-exercises .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="example"][data-type="problems-exercises"] [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="example"][data-type="problems-exercises"] .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="example"][data-type="problems-exercises"] [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="example"][data-type="problems-exercises"] .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="example"] div[data-type="title"] {
+  font-weight: bold; }
+
 .example [data-type="problem"] {
   padding: 0.5em 1em; }
 
@@ -671,6 +738,73 @@ a:hover {
 
 .example .solution:not(.ui-solution-visible) > section {
   display: none; }
+
+.example.check-understanding [data-type="title"]::before {
+  margin-right: 0;
+  content: ""; }
+
+.example.check-understanding .title::before {
+  margin-right: 0;
+  content: ""; }
+
+.example.problems-exercises [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.example.problems-exercises .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.example.problems-exercises [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.example.problems-exercises .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.example[data-type="problems-exercises"] [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.example[data-type="problems-exercises"] .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.example[data-type="problems-exercises"] [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.example[data-type="problems-exercises"] .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.example div[data-type="title"] {
+  font-weight: bold; }
 
 [data-type="exercise"] [data-type="problem"] {
   padding: 0.5em 1em; }
@@ -722,6 +856,73 @@ a:hover {
 [data-type="exercise"] .solution:not(.ui-solution-visible) > section {
   display: none; }
 
+[data-type="exercise"].check-understanding [data-type="title"]::before {
+  margin-right: 0;
+  content: ""; }
+
+[data-type="exercise"].check-understanding .title::before {
+  margin-right: 0;
+  content: ""; }
+
+[data-type="exercise"].problems-exercises [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="exercise"].problems-exercises .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="exercise"].problems-exercises [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="exercise"].problems-exercises .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="exercise"][data-type="problems-exercises"] [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="exercise"][data-type="problems-exercises"] .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+[data-type="exercise"][data-type="problems-exercises"] [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="exercise"][data-type="problems-exercises"] .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+[data-type="exercise"] div[data-type="title"] {
+  font-weight: bold; }
+
 .exercise [data-type="problem"] {
   padding: 0.5em 1em; }
 
@@ -771,5 +972,72 @@ a:hover {
 
 .exercise .solution:not(.ui-solution-visible) > section {
   display: none; }
+
+.exercise.check-understanding [data-type="title"]::before {
+  margin-right: 0;
+  content: ""; }
+
+.exercise.check-understanding .title::before {
+  margin-right: 0;
+  content: ""; }
+
+.exercise.problems-exercises [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.exercise.problems-exercises .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.exercise.problems-exercises [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.exercise.problems-exercises .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.exercise[data-type="problems-exercises"] [data-type="problem"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.exercise[data-type="problems-exercises"] .problem::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Problem"; }
+
+.exercise[data-type="problems-exercises"] [data-type="solution"]::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.exercise[data-type="problems-exercises"] .solution::before {
+  color: #424242;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  content: "Solution"; }
+
+.exercise div[data-type="title"] {
+  font-weight: bold; }
 
 /*# sourceMappingURL=webview-generic.css.map */
